# FinSight

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
docs/: implementation_plan.md
static/: app.js  index.html  style.css
tabular_rag_pipeline/: __init__.py  audit_logger.py  cache_manager.py  category_parser.py  config.py  data_store.py  exceptions.py  guardrails.py  llm_client.py  pipeline.py  prompt_builder.py  visualizations.py
tests/: smoke_test.py  test_cache_manager.py  test_category_parser.py  test_data_store.py  test_guardrails.py
